* Removed a gap beside the left button lists (index.css) [Bug 3666]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8899 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1170,6 +1170,10 @@ span.lowerframe span
 {
 	color: #ddf;
 }
+.align_top ul li a, .align_bottom ul li a
+{
+	margin: 0 12px 0 0;
+}
 /* a smaller quick-button list */
 ul.quickbuttons li
 {
